clean up; fix banners still load on mobile devices problem;

--- a/_assets/stylesheets/mobile.css.scss
+++ b/_assets/stylesheets/mobile.css.scss
@@ -330,6 +330,10 @@
     visibility: hidden;
     height: 0;
     margin-top: 25px;
+    background: none;
+    .banner-text {
+      background: none;
+    }
   }
 
   .page_nav {
